test/error/E40.chigmod
{
	"name": "hello",
	"dependencies": [23]
}
